--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -40,9 +40,9 @@ Note: When running the provided commands, ignore the double quotations unless yo
 
 4. In the Visual Studio Code, open the terminal and navigate to your desktop via terminal to ensure easier access. From there, you want to run this code: "git clone https://github.com/USERNAME/USERNAME.github.io.git". A folder called "USERNAME.github.io" will be created on your desktop that will contain the contents from your github.
 
-5.  In your terminal console, navigate to "USERNAME.github.io" folder and execute jekyll by typing this command: "jekyll new docs". It will generate the appropriate files with the parent file being named "docs" to make your blogs and website accessible via jekyll. 
+5.  In your terminal console, navigate to "USERNAME.github.io" folder and execute jekyll by typing this command: "jekyll new docs". It will generate the appropriate files with the parent file being named "docs" to make your blogs and website accessible via jekyll and Github. 
 
-6. Navigate to your Gemfile through the visual studio by simply clicking on the docs directory and locating it. Ensure that line 10 and 15 are uncommented by removing the "#" in front. After removing the "#" from the respective lines, you can either "ctrl + s" or save the file for changes. 
+6. Navigate to your Gemfile through Visual Studio by simply clicking on the docs directory and locating it. Ensure that line 10 and 15 are uncommented by removing the "#" in front. After removing the "#" from the respective lines, you can either "ctrl + s" or save the file for changes. 
 
 7. After changing the Gemfile, navigate back to your "USERNAME.github.io" folder via terminal , run the command: "git status" to see whether all the files in your directory has been staged yet. Because this is your first time, the relative path should be in the color red. 
 
@@ -52,9 +52,9 @@ Note: When running the provided commands, ignore the double quotations unless yo
 
 10. Now, run the command: "git commit -m "MESSAGE"" where the MESSAGE  is a placeholder for any notes you want to add. It can be anything, but keep it relevant to what you're trying to save onto your repository.
 
-11. Finally, run the command: "git push". this will upload all the files that were saved onto your Github repository. When you log onto github, you will see all your files from your USERNAME.github.io located in your repository. 
+11. Finally, run the command: "git push". this will upload all the files that were saved from your local repository to your Github repository. When you log onto Github, you will see all your files from your USERNAME.github.io located in your repository. 
 
-12. To create a post, through Visual Code Studio, simply navigate through the "_posts" directory and right click the directory to create a new file. NOTE: "It's in your best practice to name the file of your post "YYYY-MM-DD-FILENAME.md" and use "-" instead of spaces. Using spaces will and a different format of the filename will generate issues. In addition, ensure the beginning of every blog post has this in the beginning. I attached an external link below as a sample below:
+12. To create a post, through Visual Code Studio, simply navigate through the "_posts" directory and right click the directory to create a new file. NOTE: "It's in your best practice to name the file of your post "YYYY-MM-DD-FILENAME.md" and use "-" instead of spaces. Using spaces and a different format of the filename will generate issues. In addition, ensure the beginning of every blog post has this in the beginning. I attached an external link below as a sample below:
 https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883
 
 13. Save your file (ctrl + s or file > save). Repeat steps 7-11.
