added known issues

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -62,3 +62,15 @@ https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883
 14. Go back to your repository settings. Scroll all the way down to the GitHub page section. There should be a url and that url is for you to access your blog post. You may need to open in a new window or browser for your blogs/posts to be updated because the browser cache takes a while for it to update.
 
 Congratulations! You have created your first blog using Github. The hardest part is to set up your GitHub page with Jekyll. After setting it up, creating a blog is as simple as creating a new md file and running the three commands which are git add, git commit, and git push. Go have fun! 
+
+Known Issues:
+If you try to update your repository for whatever reason and received the following error message,
+
+! [rejected]        master -> master (fetch first)
+error: failed to push some refs to 'https://github.com/christopher-der/christopher-der.github.io.git'
+hint: Updates were rejected because the remote contains work that you do
+hint: not have locally. This is usually caused by another repository pushing
+hint: to the same ref. You may want to first integrate the remote changes
+hint: (e.g., 'git pull ...') before pushing again.
+
+simply run the command: "git pull" followed by "git push" to resolve this error.
