edited known issues

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -67,7 +67,7 @@ Known Issues:
 If you try to update your repository for whatever reason and received the following error message,
 
 ! [rejected]        master -> master (fetch first)
-error: failed to push some refs to 'https://github.com/christopher-der/christopher-der.github.io.git'
+error: failed to push some refs to 'https://github.com/USERNAME/USERNAME.github.io.git'
 hint: Updates were rejected because the remote contains work that you do
 hint: not have locally. This is usually caused by another repository pushing
 hint: to the same ref. You may want to first integrate the remote changes
