added known issues

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -8,7 +8,9 @@ categories: jekyll update
 Introduction:
 Before I start, I would like to thank Professor Smith for helping me resolving a few issues with setting up github with jekyll. I figured it would be in everyone's best interest for to write a tutorial for Microsoft Windows Users who are still struggling with setting up github with jekyll. 
 
+
 Requirements:
+
 A Github account
 
 Latest version of Ruby
@@ -61,4 +63,19 @@ https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883
 
 14. Go back to your repository settings. Scroll all the way down to the GitHub page section. There should be a url and that url is for you to access your blog post. You may need to open in a new window or browser for your blogs/posts to be updated because the browser cache takes a while for it to update.
 
+
 Congratulations! You have created your first blog using Github. The hardest part is to set up your GitHub page with Jekyll. After setting it up, creating a blog is as simple as creating a new md file and running the three commands which are git add, git commit, and git push. Go have fun! 
+
+
+Known issues:
+
+After running the "git push" command, some users may receive this error message shown below:
+
+ ! [rejected]        master -> master (fetch first)
+error: failed to push some refs to 'https://github.com/USERNAME/USERNAME.github.io.git'
+hint: Updates were rejected because the remote contains work that you do
+hint: not have locally. This is usually caused by another repository pushing
+hint: to the same ref. You may want to first integrate the remote changes
+hint: (e.g., 'git pull ...') before pushing again.
+
+Simply run the command: "git pull" and to ensure things are up to date also run the command: "git push" to resolve this issue.
