added code sniplets

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -42,29 +42,46 @@ Note: When running the provided commands, ignore the double quotations unless yo
 
 4. In the Visual Studio Code, open the terminal and navigate to your desktop via terminal to ensure easier access. From there, you want to run this code: "git clone https://github.com/USERNAME/USERNAME.github.io.git". A folder called "USERNAME.github.io" will be created on your desktop that will contain the contents from your github.
 
-5.  In your terminal console, navigate to "USERNAME.github.io" folder and execute jekyll by typing this command: "jekyll new docs". It will generate the appropriate files with the parent file being named "docs" to make your blogs and website accessible via jekyll and Github. 
+5.  In your terminal console, navigate to "USERNAME.github.io" folder and execute jekyll by typing this command: 
+<code>jekyll new docs</code>
+It will generate the appropriate files with the parent file being named "docs" to make your blogs and website accessible via jekyll and Github. 
 
 6. Navigate to your Gemfile through Visual Studio by simply clicking on the docs directory and locating it. Ensure that line 10 and 15 are uncommented by removing the "#" in front. After removing the "#" from the respective lines, you can either "ctrl + s" or save the file for changes. 
 
-7. After changing the Gemfile, navigate back to your "USERNAME.github.io" folder via terminal , run the command: "git status" to see whether all the files in your directory has been staged yet. Because this is your first time, the relative path should be in the color red. 
+7. After changing the Gemfile, navigate back to your "USERNAME.github.io" folder via terminal , run the command:
+ <code>git status</code>
+ to see whether all the files in your directory has been staged yet. Because this is your first time, the relative path should be in the color red. 
 
-8. Next, run the command: "git add RELATIVE_PATH" where the RELATIVE_PATH is a placeholder for the relative path that the git status command has provided you with. Alternatively, you can run the command "git add ." to update/track all files for you to commit.
+8. Next, run the command: 
+<code>git add RELATIVE_PATH</code> 
+where the RELATIVE_PATH is a placeholder for the relative path that the git status command has provided you with. Alternatively, you can run the command: 
+<code>git add .</code>
+to update/track all files for you to commit.
 
-9. Run the command "git status". Because you ran the git add command, the relative path shown to you should now be green instead of red. This means that the files are now selected or track and ready to be commit.
+9. Run the command:
+ <code>git status</code>
+ Because you ran the git add command, the relative path shown to you should now be green instead of red. This means that the files are now selected or track and ready to be commit.
 
-10. Now, run the command: "git commit -m "MESSAGE"" where the MESSAGE  is a placeholder for any notes you want to add. It can be anything, but keep it relevant to what you're trying to save onto your repository.
+10. Now, run the command: 
+<code>git commit -m "MESSAGE"</code>
+where the MESSAGE  is a placeholder for any notes you want to add. It can be anything, but keep it relevant to what you're trying to save onto your repository.
 
-11. Finally, run the command: "git push". this will upload all the files that were saved from your local repository to your Github repository. When you log onto Github, you will see all your files from your USERNAME.github.io located in your repository. 
+11. Finally, run the command: 
+<code>git push</code>
+This will upload all the files that were saved from your local repository to your Github repository. When you log onto Github, you will see all your files from your USERNAME.github.io located in your repository. 
 
 12. To create a post, through Visual Code Studio, simply navigate through the "_posts" directory and right click the directory to create a new file. NOTE: "It's in your best practice to name the file of your post "YYYY-MM-DD-FILENAME.md" and use "-" instead of spaces. Using spaces and a different format of the filename will generate issues. In addition, ensure the beginning of every blog post has this in the beginning. I attached an external link below as a sample below:
 https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883
 
-13. Save your file (ctrl + s or file > save). Repeat steps 7-11.
+13. Save your file (ctrl + s or file > save). Repeat steps 7-11 and 13.
 
 14. Go back to your repository settings. Scroll all the way down to the GitHub page section. There should be a url and that url is for you to access your blog post. You may need to open in a new window or browser for your blogs/posts to be updated because the browser cache takes a while for it to update.
 
 
-Congratulations! You have created your first blog using Github. The hardest part is to set up your GitHub page with Jekyll. After setting it up, creating a blog is as simple as creating a new md file and running the three commands which are git add, git commit, and git push. Go have fun! 
+Congratulations! You have created your first blog using Github. The hardest part is to set up your GitHub page with Jekyll. After setting it up, creating a blog is as simple as creating a new md file and running the three commands:
+<code> git add . </code>
+<code>git commit -m "MESSAGE"</code>
+<code>git push</code>
 
 
 Known issues:
