additional code sniplets fixed

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -111,4 +111,8 @@ hint: not have locally. This is usually caused by another repository pushing
 hint: to the same ref. You may want to first integrate the remote changes
 hint: (e.g., 'git pull ...') before pushing again.
 
-Simply run the command: "git pull" and to ensure things are up to date also run the command: "git push" to resolve this issue.
+Simply run the command: 
+<br>
+<code>git pull</code>
+<br>
+ and to ensure things are up to date also run the command: "git push" to resolve this issue.
