--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -14,19 +14,19 @@ Requirements:
 A Github account
 
 Latest version of Ruby
-https://www.ruby-lang.org/en/documentation/installation/
+<br><a href="https://www.ruby-lang.org/en/documentation/installation/">https://www.ruby-lang.org/en/documentation/installation/</a>
 
 Latest version of Git
-https://git-scm.com/downloads
+<br><a href="https://git-scm.com/downloads">https://git-scm.com/downloads</a>
 
 Latest version of Jekyll
-https://jekyllrb.com/docs/installation/
+<br><a href="https://jekyllrb.com/docs/installation/">https://jekyllrb.com/docs/installation/</a>
 
 Latest version of Bundle
-https://bundler.io/
+<br><a href="https://bundler.io/">https://bundler.io/</a>
 
 Visual Studio Code (highly recommended)
-https://code.visualstudio.com/download
+<br><a href="https://code.visualstudio.com/download">https://code.visualstudio.com/download</a>
 
 
 Instructions:
