--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -5,11 +5,11 @@ date:   2020-09-03 16:35:33 -0700
 categories: jekyll update
 ---
 
-Introduction:
+<b>Introduction:</b>
 Before I start, I would like to thank Professor Smith for helping me resolving a few issues with setting up github with jekyll. I figured it would be in everyone's best interest for to write a tutorial for Microsoft Windows Users who are still struggling with setting up github with jekyll. 
 
 
-Requirements:
+<b>Requirements:</b>
 
 A Github account
 
@@ -29,10 +29,9 @@ Visual Studio Code (highly recommended)
 <br><a href="https://code.visualstudio.com/download">https://code.visualstudio.com/download</a>
 
 
-Instructions:
-IMPORTANT: Ensure all these requirements are installed onto your computer before proceeding or else complications may occur.
+<b>Instructions:</b>
+<br><b>IMPORTANT:</b> Ensure all these requirements are installed onto your computer before proceeding or else complications may occur.
 
-Note: When running the provided commands, ignore the double quotations unless you are told otherwise.
 
 1. Access your github profile > click on repositories > create a new respository if you haven't done so already. I personally recommend naming youre respository USERNAME.github.io where the "USERNAME" is the username of your github account. Check off public and "add a README.txt". It is best practice to do this to avoid any unnecessary issues generating your website with jekyll.
 
