added bolded headers

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -99,7 +99,7 @@ Congratulations! You have created your first blog using Github. The hardest part
 <br>
 
 
-Known issues:
+<b>Known issues:</b>
 
 After running the "git push" command, some users may receive this error message shown below:
 
