added hyperlink for github

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -12,6 +12,7 @@ Before I start, I would like to thank Professor Smith for helping me resolving a
 <b>Requirements:</b>
 
 A Github account
+<br> <a href="https://github.com/">https://github.com/</a>
 
 Latest version of Ruby
 <br><a href="https://www.ruby-lang.org/en/documentation/installation/">https://www.ruby-lang.org/en/documentation/installation/</a>
