--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -85,7 +85,7 @@ where the MESSAGE  is a placeholder for any notes you want to add. It can be any
 This will upload all the files that were saved from your local repository to your Github repository. When you log onto Github, you will see all your files from your USERNAME.github.io located in your repository. 
 
 12. To create a post, through Visual Code Studio, simply navigate through the "_posts" directory and right click the directory to create a new file. NOTE: "It's in your best practice to name the file of your post "YYYY-MM-DD-FILENAME.md" and use "-" instead of spaces. Using spaces and a different format of the filename will generate issues. In addition, ensure the beginning of every blog post has this in the beginning. I attached an external link below as a sample below:
-https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883
+<a href="https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883">Header Format</a>
 
 13. Save your file (ctrl + s or file > save). Repeat steps 7-11 and 13.
 
