--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -40,7 +40,11 @@ Visual Studio Code (highly recommended)
 
 3. Head back to the repository, click on the green button that saids "Code" and copy the HTTP link provided for you. It should look something like this https://github.com/USERNAME/USERNAME.github.io.git
 
-4. In the Visual Studio Code, open the terminal and navigate to your desktop via terminal to ensure easier access. From there, you want to run this code: "git clone https://github.com/USERNAME/USERNAME.github.io.git". A folder called "USERNAME.github.io" will be created on your desktop that will contain the contents from your github.
+4. In the Visual Studio Code, open the terminal and navigate to your desktop via terminal to ensure easier access. From there, you want to run this code: 
+<br>
+<code>git clone https://github.com/USERNAME/USERNAME.github.io.git</code>
+<br>
+A folder called "USERNAME.github.io" will be created on your desktop that will contain the contents from your github.
 
 5.  In your terminal console, navigate to "USERNAME.github.io" folder and execute jekyll by typing this command: 
 <br>
@@ -85,7 +89,7 @@ where the MESSAGE  is a placeholder for any notes you want to add. It can be any
 This will upload all the files that were saved from your local repository to your Github repository. When you log onto Github, you will see all your files from your USERNAME.github.io located in your repository. 
 
 12. To create a post, through Visual Code Studio, simply navigate through the "_posts" directory and right click the directory to create a new file. NOTE: "It's in your best practice to name the file of your post "YYYY-MM-DD-FILENAME.md" and use "-" instead of spaces. Using spaces and a different format of the filename will generate issues. In addition, ensure the beginning of every blog post has this in the beginning. I attached an external link below as a sample below:
-<a href="https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883">Header Format</a>
+<br><a href="https://gyazo.com/0a0e575bf0eec46f0e2eb5af66b53883">Header Format</a>
 
 13. Save your file (ctrl + s or file > save). Repeat steps 7-11 and 13.
 
