--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -40,7 +40,7 @@ Visual Studio Code (highly recommended)
 
 3. Head back to the repository, click on the green button that saids "Code" and copy the HTTP link provided for you. It should look something like this https://github.com/USERNAME/USERNAME.github.io.git
 
-4. In the Visual Studio Code, open the terminal and navigate to your desktop via terminal to ensure easier access. From there, you want to run this code: 
+4. In the Visual Studio Code, open the terminal and navigate to your desktop via terminal to ensure easier access. From there, you want to run the "git clone" command along with the http link provided for you like this: 
 <br>
 <code>git clone https://github.com/USERNAME/USERNAME.github.io.git</code>
 <br>
