fixed code sniplets

--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -121,4 +121,8 @@ Simply run the command:
 <br>
 <code>git pull</code>
 <br>
- and to ensure things are up to date also run the command: "git push" to resolve this issue.
+ and to ensure things are up to date also run the command:
+  <br>
+  <code>git push</code>
+  <br>
+  to resolve this issue.
