--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -34,7 +34,7 @@ Visual Studio Code (highly recommended)
 <br><b>IMPORTANT:</b> Ensure all these requirements are installed onto your computer before proceeding or else complications may occur.
 
 
-1. Access your github profile > click on repositories > create a new respository if you haven't done so already. I personally recommend naming youre respository USERNAME.github.io where the "USERNAME" is the username of your github account. Check off public and "add a README.txt". It is best practice to do this to avoid any unnecessary issues generating your website with jekyll.
+1. Access your github profile > click on repositories > create a new respository if you haven't done so already. I personally recommend naming your respository USERNAME.github.io where the "USERNAME" is the username of your github account. Check off public and "add a README.txt". It is best practice to do this to avoid any unnecessary issues generating your website with jekyll.
 
 2. Navigate to your repository settings (not account settings) by accessing your repository and clicking on the settings (cog icon). From there, scroll all the way down to the GitHub Page section and check if the Branch is set to "master" and the folder is set to "/docs".
 
