--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -96,7 +96,7 @@ This will upload all the files that were saved from your local repository to you
 14. Go back to your repository settings. Scroll all the way down to the GitHub page section. There should be a url and that url is for you to access your blog post. You may need to open in a new window or browser for your blogs/posts to be updated because the browser cache takes a while for it to update.
 
 
-Congratulations! You have created your first blog using Github. The hardest part is to set up your GitHub page with Jekyll. After setting it up, creating a blog is as simple as creating a new md file and running the three commands:
+Congratulations! You have created your first blog using Github. The hardest part is to set up your GitHub page with Jekyll. After setting it up, creating a blog or updating it is as simple as creating a new md file and running the three commands:
 <br>
 <code> git add . </code>
 <br>
