--- a/docs/_posts/2020-09-03-blog-0.md
+++ b/docs/_posts/2020-09-03-blog-0.md
@@ -6,7 +6,7 @@ categories: jekyll update
 ---
 
 <b>Introduction:</b>
-Before I start, I would like to thank Professor Smith for helping me resolving a few issues with setting up github with jekyll. I figured it would be in everyone's best interest for to write a tutorial for Microsoft Windows Users who are still struggling with setting up github with jekyll. 
+Before I start, I would like to thank Professor Smith for helping me resolve a few issues with setting up github with jekyll. I figured it would be in everyone's best interest for to write a tutorial for Microsoft Windows Users who are still struggling with setting up github with jekyll. 
 
 
 <b>Requirements:</b>
