unordered list added

--- a/docs/_posts/2020-09-09-blog-1.md
+++ b/docs/_posts/2020-09-09-blog-1.md
@@ -89,23 +89,21 @@ Congratulations once again! You have logged onto your container using your crede
 <br>
 <br>
 <h2><b>Additional Notes:</b></h2>
-<br>
-Everytimme you open docker, exit docker, or exit your container, you will need to run the command: 
+<ul>
+<li>Everytime you open docker, exit docker, or exit your container, you will need to run the command: 
 <br>
 <code>docker start &lt;CONTAINER_NAME&gt;</code>
 <br>
 to start your container again before you log into it.
-<br>
-<br>
-Whenever you need to exit your container for whatever reason, simply just run the following command:
+</li>
+<li>Whenever you need to exit your container for whatever reason, simply just run the following command:
 <br>
 <code>exit</code>
-<br>
-<br>
-If for whatever reason your root user account was deleted or you want to give an additional user root privileges, simply run the command:
+</li>
+<li>If for whatever reason your root user account was deleted or you want to give an additional user root privileges, simply run the command:
 <br>
 <code>docker exec -it &lt;CONTAINER_NAME&gt; bash</code>
 <br>
 and repeat steps 6-7 depending whether the new user has been created or not. 
-
-
+</li>
+</ul>
