added more content in intro

--- a/docs/_posts/2020-09-09-blog-1.md
+++ b/docs/_posts/2020-09-09-blog-1.md
@@ -7,7 +7,7 @@ categories: jekyll update
 <h1><b>Docker Setup Tutorial</b></h1>
 <br>
 <h2><b>Introduction:</b></h2>
-<p>To prepare everyone for the upcoming lab we have to do for Professor Lisa's COMP 480 class, I figured it would be in everyone's best interest to do a tutorial of installing docker, creating containers, and installing ubuntu into the docker container. This tutorial is primarily for Windows Users, but I will provide the installation link for MAC OS and the instructions should be really similar or the same. Keep in mind, this blog post was done before the class that Professor Lisa has posted specifics for using/running docker so you might have to change up a few commands to accomodate for her requirements. This tutorial is meant to be used as a reference to help students get an idea of how to configure/setup docker. Therefore, minor adjustments may be needed.</p>
+<p>I have quite some experience with docker from the previous years and noticed some people having trouble starting setting up their containers without a proper guide. To prepare everyone for the upcoming lab we have to do for Professor Lisa's COMP 480 class, I figured it would be in everyone's best interest to do a tutorial of installing docker, creating containers, and installing ubuntu into the docker container. This tutorial is primarily for Windows Users, but I will provide the installation link for MAC OS and the instructions should be really similar or the same. Keep in mind, this blog post was done before the class that Professor Lisa has posted specifics for using/running docker so you might have to change up a few commands to accomodate for her requirements. This tutorial is meant to be used as a reference to help students get an idea of how to configure/setup docker. Therefore, minor adjustments may be needed. Also, for the next few blogs, I'm thinking about starting a series about html. To ensure topic diversity, I will not be posting blogs about html no more than twice in a row. I haven't really decided yet, but it's still a thought in progress. Without further a do, let's begin!</p>
 <h2><b>Requirements:</b></h2>
 <ul>
 <li>Windows 10 or MAC 0S computer</li>
