added strong tags

--- a/docs/_posts/2020-09-09-blog-1.md
+++ b/docs/_posts/2020-09-09-blog-1.md
@@ -36,7 +36,7 @@ In this case, I prefer to use Ubuntu so I am going to pull that image from the h
 <br>
 Keep in mind that you can pull any type of image from the Docker Hub, assuming Docker supports it.
 <br>
-<b>Note:</b> I highly recommend checking if the image has been sucessfully installed locally by running this command:
+<b>Note:</b> I <strong>HIGHLY</strong> recommend checking if the image has been sucessfully installed locally by running this command:
 <br>
 <code>docker image ls -a</code>
 <br>
@@ -54,7 +54,7 @@ This command will allow you to create and name your container. This will login y
 <br>
 This command will download packages from various sources to ensure that all assets are at current standards.
 
-5. Next, to keep your environment secured and from being exploited, I HIGHLY recommend installing sudo onto docker to practice security protocol. Run the following command:
+5. Next, to keep your environment secured and from being exploited, I <strong>HIGHLY</strong> recommend installing sudo onto docker to practice security protocol. Run the following command:
 <br>
 <code>apt-get install sudo</code>
 <br>
