--- a/docs/_posts/2020-09-15-blog-2.md
+++ b/docs/_posts/2020-09-15-blog-2.md
@@ -27,15 +27,14 @@ categories: jekyll update
 If you were to type it in your source-code ediot, it will display the following:
 <code><p> This is an example of a paragraph </p></code>
 <br>
-<p> The next tag I would be going over is the &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, and etc. I like to call these group of tags header tags. These tags define which texts are the main and sub headers. Also, using the header tag will require an opening and closing tag. The &lt;h1&gt; tag is the main header of the webpage and typically, you would use only one &lt;h1&gt; tag per webpage. As you descend through the numbers, the headers will become sub headers of one another. When practicing the use of headers on your webpage, <strong>DO NOT</strong> skip through the hierarchy of headers i.e. start with the &lt;h1&gt; and go down the hierarchy. Do not skip headers.  You can have multiple  &lt;h2&gt;, &lt;h34&gt;, and etc., if and only if the topic or content are relevant. An example can be show below:</p>
+<p> The next tag I would be going over is the &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, and etc. I like to call these group of tags header tags. These tags define which texts are the main and sub headers. Also, using the header tag will require an opening and closing tag. The &lt;h1&gt; tag is the main header of the webpage and typically, you would use only one &lt;h1&gt; tag per webpage. As you descend through the numbers, the headers will become sub headers of one another. When practicing the use of headers on your webpage, <strong>DO NOT</strong> skip through the hierarchy of headers i.e. start with the &lt;h1&gt; and go down the hierarchy. Do not skip headers.  You can have multiple  &lt;h2&gt;, &lt;h3&gt;, and etc., if and only if the topic or content are relevant. An example can be show below:</p>
 <code>&lt;h1&gt;this is the main header &lt;/h1&gt; <br>
 &nbsp;&lt;h2&gt;this is the sub header for h1&lt;/h2&gt;<br>
 &nbsp;&nbsp;&lt;h3&gt;this is the sub header for h2&lt;/h3&gt;<br>
-<br>
-&nbsp;&lt;h2&gt;this is also the sub header for h1&lt;/h2&gt;
+&nbsp;&lt;h2&gt;this is also the sub header for h1&lt;/h2&gt;<br>
 </code>
-<br>
-The output:
+
+The output:<br>
 <code><h1>this is the main header </h1> <br>
 &nbsp;<h2>this is the sub header for h1</h2><br>
 &nbsp;&nbsp;<h3>this is the sub header for h2</h3><br>
