--- a/docs/_posts/2020-09-15-blog-2.md
+++ b/docs/_posts/2020-09-15-blog-2.md
@@ -20,18 +20,18 @@ categories: jekyll update
 <p> Before we go over the most basic structure of how a HTML webpage would look like, I would like to introduce some HTML tags that you'll most likely be using for your webpage. When creating a tag, there will be some tags that will require a closing tag which will indicate the end of a tag. You will learn more about how to create and use these tags below.
 </p>
 <p> The first tag I would like to introduce is the &lt;p&gt; tag. The &lt;p&gt; tag defines the text contained within the element is a paragraph. This allows the browser to identify which line(s) of text is a paragrah and incorporate the proper format and spacing to it. Keep in mind, the &lt;p&gt; tag requires a closing tag to allow the browser to identify the end of a paragraph. The closing tag is almost the same as the opening tag, but with a &quot;/&quot; in front of the p. Below is an example of how a &lt;p&gt; is being used.</p>
-<br>
 <code> &lt;p&gt; This is an example of a paragraph &lt;/p&gt;
 </code>
 <br>
-If you were to type it in your source-code ediot, it will display the following:
+If you were to type it in your source-code ediot, it will display the following:<br>
 <code><p> This is an example of a paragraph </p></code>
+<br>
 <br>
 <p> The next tag I would be going over is the &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, and etc. I like to call these group of tags header tags. These tags define which texts are the main and sub headers. Also, using the header tag will require an opening and closing tag. The &lt;h1&gt; tag is the main header of the webpage and typically, you would use only one &lt;h1&gt; tag per webpage. As you descend through the numbers, the headers will become sub headers of one another. When practicing the use of headers on your webpage, <strong>DO NOT</strong> skip through the hierarchy of headers i.e. start with the &lt;h1&gt; and go down the hierarchy. Do not skip headers.  You can have multiple  &lt;h2&gt;, &lt;h3&gt;, and etc., if and only if the topic or content are relevant. An example can be show below:</p>
 <code>&lt;h1&gt;this is the main header &lt;/h1&gt; <br>
 &nbsp;&nbsp;&nbsp;&lt;h2&gt;this is the sub header for h1&lt;/h2&gt;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&lt;h3&gt;this is the sub header for h2&lt;/h3&gt;<br>
-&nbsp;&nbsp;&nbsp;h2&gt;this is also the sub header for h1&lt;/h2&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;h2&gt;this is also the sub header for h1&lt;/h2&gt;<br>
 </code>
 
 The output:<br>
