--- a/docs/_posts/2020-09-15-blog-2.md
+++ b/docs/_posts/2020-09-15-blog-2.md
@@ -8,22 +8,28 @@ categories: jekyll update
 
 <h2><b>Introduction:</b></h2>
 
-<p>Hello all! As promised and as stated from the previous blog, I will be starting a series of blogs for HTML. Don't worry, I will diversify the content by not posting more than two HTML tutorials in a row.  The process of learning HTML is to understand the concepts and fundamentals of how a website operates. Therefore, I'll be explaning how to use each element/tag with their respective attributes briefly. This is not an in-depth guide of explaning each ekement/tag specifically. The use of these elements/tags are more subjective than objective, but it still requires the knowledge of the user knowing when to use it properly. IF you wish to understand each tag more in-de[th, I suggest looking at other guides after viewing this guide once you acquire the basic knowledge of HTML.  </p>
+<p>Hello all! As promised and as stated from the previous blog, I will be starting a series of blogs for HTML. Don't worry, I will diversify the content by not posting more than two HTML tutorials in a row.  The process of learning HTML is to understand the concepts and fundamentals of how a website operates. Therefore, I'll be explaning how to use each element/tag with their respective attributes briefly. This is not an in-depth guide of explaning each ekement/tag specifically. The use of these elements/tags are more subjective than objective, but it still requires the knowledge of the user knowing when to use it properly. If you wish to understand each tag more in-de[th, I suggest looking at other guides after viewing this guide once you acquire the basic knowledge of HTML.  </p>
 
 <h2><b>Requirements:</b></h2>
 <ul>
 <li>Visual Studio Code (recommended) or any source-code editor
 <br><a href="https://code.visualstudio.com/download"> https://code.visualstudio.com/download</a> </li>
 </ul>
-<h2><b>The Basic Structure of HTML</b></h2>
+<h2><b>The Basic Syntax of HTML</b></h2>
 
-<p> Before we go over the most basic structure of how a HTML webpage would look like, I would like to introduce some HTML tags that you'll most likely be using for your webpage. When creating a tag, there will be some tags that will require a closing tag which will indicate the end of a tag. You will learn more about how to create and use these tags below.
+<p> Before we go over the most basic syntax of how a HTML webpage would look like, I would like to introduce some HTML tags that you'll most likely be using for your webpage. When creating a tag, there will be some tags that will require a closing tag which will indicate the end of a tag. You will learn more about how to create and use these tags below.
 </p>
 <h3> The Paragraph Tag </h3>
 <p> The first tag I would like to introduce is the &lt;p&gt; tag. The &lt;p&gt; tag defines the text contained within the element is a paragraph. This allows the browser to identify which line(s) of text is a paragrah and incorporate the proper format and spacing to it. Keep in mind, the &lt;p&gt; tag requires a closing tag to allow the browser to identify the end of a paragraph. The closing tag is almost the same as the opening tag, but with a &quot;/&quot; in front of the p. Below is an example of how a &lt;p&gt; is being used.</p>
-<img src="https://i.gyazo.com/b6effdfc9cfea377e095b774494db787.png" alt= "p tag example">
+<img src="https://i.gyazo.com/1d9c81bfa01ba9ca1af6ac5c4b1d01d0.png" alt= "p tag example">
+The output:
+<img src="https://i.gyazo.com/84401a4a95f9e6d9709d5ce5d8e33da6.png" alt= "p tag output">
 <h3>The Header Tags </h3>
-<p> The next tag I would be going over is the &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, and etc. I like to call these group of tags header tags. These tags define which texts are the main and sub headers. Also, using the header tag will require an opening and closing tag. The &lt;h1&gt; tag is the main header of the webpage and typically, you would use only one &lt;h1&gt; tag per webpage. As you descend through the numbers, the headers will become sub headers of one another. When practicing the use of headers on your webpage, <strong>DO NOT</strong> skip through the hierarchy of headers i.e. start with the &lt;h1&gt; and go down the hierarchy. Do not skip headers.  You can have multiple  &lt;h2&gt;, &lt;h3&gt;, and etc., if and only if the topic or content are relevant. An example can be show below:</p>
+<p> The next tag I would be going over is the &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, and etc. I like to call these group of tags header tags. These tags define which texts are the main and sub headers. Also, using the header tag will require an opening and closing tag. The &lt;h1&gt; tag is the main header of the webpage and typically, you would use only one &lt;h1&gt; tag per webpage. As you descend through the numbers, the headers will become sub headers of one another. When practicing the use of headers on your webpage, <strong>DO NOT</strong> skip through the hierarchy of headers i.e. start with the &lt;h1&gt; and go down the hierarchy. You can have multiple  &lt;h2&gt;, &lt;h3&gt;, and etc., if and only if the topic or content are relevant. An example can be show below:</p>
 <img src="https://i.gyazo.com/88b75374bfa057cc390cbd5e2471c84a.png" alt="hierarchy of headers">
-
-
+<h3> The Most Basic Syntax of a Webpage </h3>
+<p>We learned what the paragrpah and header tags do, and how to use them. Let's now combine these tags together. As you can see when we combine these two types of tags together, we have created the most basic syntax of a HTML page. </p>
+<img src="https://i.gyazo.com/376d531210c2664cf86bade5db1f198c.png" alt="Basic HTML Page">
+The output:<br>
+<img src="https://i.gyazo.com/7ffcd2ff52f221bcdd7342b8da554f5c.png" alt="Output of the Basic HTML Page">
+<strong>NOTE:</strong> Notice how the formatting and spacing of the page is a little off. Don't worry too much about it. Eventually, you'll be able to use CSS to reformat the HTML page and make it a nicer. Do not fall into the mistake that other people have made and try to fix the formatting and spacing without using CSS. Whether it would be using different header tags and breaking the hierarchy, or using nonbreaking space, you will surely compromise the syntax. 
