--- a/docs/_posts/2020-09-15-blog-2.md
+++ b/docs/_posts/2020-09-15-blog-2.md
@@ -30,6 +30,6 @@ The output:
 <h3> The Most Basic Syntax of a Webpage </h3>
 <p>We learned what the paragrpah and header tags do, and how to use them. Let's now combine these tags together. As you can see when we combine these two types of tags together, we have created the most basic syntax of a HTML page. </p>
 <img src="https://i.gyazo.com/376d531210c2664cf86bade5db1f198c.png" alt="Basic HTML Page">
-The output:<br>
+The output:<br><br>
 <img src="https://i.gyazo.com/7ffcd2ff52f221bcdd7342b8da554f5c.png" alt="Output of the Basic HTML Page">
 <strong>NOTE:</strong> Notice how the formatting and spacing of the page is a little off. Don't worry too much about it. Eventually, you'll be able to use CSS to reformat the HTML page and make it a nicer. Do not fall into the mistake that other people have made and try to fix the formatting and spacing without using CSS. Whether it would be using different header tags and breaking the hierarchy, or using nonbreaking space, you will surely compromise the syntax. 
