--- a/docs/_posts/2020-09-15-blog-2.md
+++ b/docs/_posts/2020-09-15-blog-2.md
@@ -27,10 +27,20 @@ categories: jekyll update
 <h3><b>The Header Tags</b> </h3>
 <p> The next tag I would be going over is the &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, and etc. I like to call these group of tags header tags. These tags define which texts are the main and sub headers. Also, using the header tag will require an opening and closing tag. The &lt;h1&gt; tag is the main header of the webpage and typically, you would use only one &lt;h1&gt; tag per webpage. As you descend through the numbers, the headers will become sub headers of one another. When practicing the use of headers on your webpage, <strong>DO NOT</strong> skip through the hierarchy of headers i.e. start with the &lt;h1&gt; and go down the hierarchy. You can have multiple  &lt;h2&gt;, &lt;h3&gt;, and etc., if and only if the topic or content are relevant. An example can be show below:</p>
 <img src="https://i.gyazo.com/88b75374bfa057cc390cbd5e2471c84a.png" alt="hierarchy of headers">
-<h3> The Most Basic Syntax of a Webpage </h3>
+<h3><b>The Most Basic Syntax of a Webpage</b></h3>
 <p>We learned what the paragrpah and header tags do, and how to use them. Let's now combine these tags together. As you can see when we combine these two types of tags together, we have created the most basic syntax of a HTML page. </p>
 <img src="https://i.gyazo.com/376d531210c2664cf86bade5db1f198c.png" alt="Basic HTML Page">
 <p>The output:</p>
-<img src="https://i.gyazo.com/7ffcd2ff52f221bcdd7342b8da554f5c.png" alt="Output of the Basic HTML Page">
+<img src="https://i.gyazo.com/7ffcd2ff52f221bcdd7342b8da554f5c.png" alt="Output of a Basic HTML Page">
 <p><strong>NOTE:</strong> Notice how the formatting and spacing of the page is a little off. Don't worry too much about it. Eventually, you'll be able to use CSS to reformat the HTML page and make it a nicer. Do not fall into the mistake that other people have made and try to fix the formatting and spacing without using CSS. Whether it would be using different header tags and breaking the hierarchy, or using nonbreaking space, you will surely compromise the syntax. </p>
 <h3><b>Syntax with Nested Tags</b></h3>
+<p> The most common mistake that most beginners make is failing to properly use nested tags. When using nested tags, the most recent tag opened also must be closed before any other tags needs to be closed. Below, there is an example showing you how to use nested tags properly and how you should <strong>NOT</strong> use nested tags.
+</p>
+<p> The Incorrect Way: </p>
+<img src="https://i.gyazo.com/3ed0bcac526eb15a60f0e50abaec6cfa.png" alt="Incorrect Nested Tags">
+<p> The Correct Way: </p>
+<img src="https://i.gyazo.com/373665d895aea0c7087d6d7a5632c4c1.png" alt="Correct Nested Tags">
+<p> As you can see above, notice how the &lt;strong&gt; was open most recently; therefore, to properly execute the use of nested tags, I must have to close it first before being able to close the &lt;o&gt;. Otherwise, your website will run into syntax error and the browser will not be able to load the text properly.</p>
+<h2><b>Conclusion</b></h2>
+<p>Well that's all for now. Try practicing what you learned today on your source-code editor. With a few hours of playing around with HTML, you'll be able to understand how nested tags work and prevent these kind of silly mistakes from occurring. I have not decided exactly when I will post the second part to this HTML series, but when I do, the next topic is going to be about the structure of a HTML page, how to use special characters, and the differentiation between various tags that users mistaken each of them for. However, I won't say much now because I don't want to spoil what you're going to learn next time I continue the HTML series and I would like to keep all of you in suspense. But until then, I'm signing out. Farewell and have a good week!
+</p>
